# red-list-dashboard

./: .gitignore  README.md  TODOs.txt  pyproject.toml  test_classifier.py  todo.txt
app/: package-lock.json  package.json
app/data/: gbif-actinopterygii.csv  gbif-amphibia.csv  gbif-anthozoa.csv  gbif-arachnida.csv  gbif-aves.csv  gbif-bivalvia.csv  gbif-fishes.csv  gbif-fungi.csv  gbif-gastropoda.csv  gbif-mammalia.csv  gbif-plantae.csv  gbif-reptilia.csv  redlist-arachnida.json  redlist-chondrichthyes.json  redlist-gastropoda.json  redlist-malacostraca.json
app/public/: gbif-chondrichthyes.csv  gbif-malacostraca.csv  gbif-mollusca.csv  plant_species_counts.csv  plant_species_counts.json
app/scripts/: fetch-all-taxa.ts  fetch-gbif-species.ts  fetch-redlist-species.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/candidates/: route.ts
app/src/app/api/country/stats/: route.ts
app/src/app/api/gbif/taxa/: route.ts
app/src/app/api/redlist/assessments/: route.ts
app/src/app/api/redlist/species/: route.ts
app/src/app/api/species/: route.ts
app/src/app/candidates/: page.tsx
app/src/app/experiment/: page.tsx
app/src/app/gbif/: page.tsx
app/src/app/redlist/: page.tsx
app/src/components/: CandidateMap.tsx  LocateControl.tsx  OccurrenceMap.tsx  ThemeToggle.tsx  WorldMap.tsx
app/src/components/gbif/: GBIFTaxaSummary.tsx
app/src/components/redlist/: RedListView.tsx  TaxaSummary.tsx
app/src/config/: taxa.ts
classifier/: __init__.py  cli.py  gbif.py  model.py  predict.py  training.py
finder/: __init__.py  methods.py  pipeline.py
(+4 files in other folders)
